# QuotientHomology

./: .gitignore  LICENSE  README.md  pyproject.toml
analysis/: XOR_examples.py  hom_propagation.py  knot_test.py  num_overlap_test.py  top_propagation.py
data/: D-I-test-labels.npy  D-I-test.npy  D-I-train-labels.npy  D-I-train.npy  D-II-test-labels.npy  D-II-test.npy  D-II-train-labels.npy  D-II-train.npy  D-III-test-labels.npy  D-III-test.npy  D-III-train-labels.npy  D-III-train.npy
models/: D-II-2_model_0.pth  D-II-2_model_1.pth  D-II-2_model_10.pth  D-II-2_model_11.pth  D-II-2_model_12.pth  D-II-2_model_13.pth  D-II-2_model_14.pth  D-II-2_model_15.pth  D-II-2_model_16.pth  D-II-2_model_17.pth  D-II-2_model_18.pth  D-II-2_model_19.pth  D-II-2_model_2.pth  D-II-2_model_20.pth  D-II-2_model_21.pth  D-II-2_model_22.pth  D-II-2_model_23.pth  D-II-2_model_24.pth  D-II-2_model_25.pth  D-II-2_model_26.pth  D-II-2_model_27.pth  D-II-2_model_28.pth  D-II-2_model_29.pth  D-II-2_model_3.pth  D-II-2_model_4.pth  D-II-2_model_5.pth  D-II-2_model_6.pth  D-II-2_model_7.pth  D-II-2_model_8.pth  D-II-2_model_9.pth  D-III-2_model_0.pth  D-III-2_model_1.pth  D-III-2_model_10.pth  D-III-2_model_11.pth  D-III-2_model_12.pth  D-III-2_model_13.pth  D-III-2_model_14.pth  D-III-2_model_15.pth  D-III-2_model_16.pth  D-III-2_model_17.pth  (+110 more)
src/: NetRelHom.py  TopologicalMethods.py
src/QuotientHomology/: NetRelHom.py  __init__.py
test/: full_region_analysis.py  hom_propagation.py  knot_test.py  num_overlap_test.py  num_overlaps.py  top_propagation.py  toroidal_test.py
