[project]
name = "quotient-homology"
version = "0.1.0"
description = "Quotient homology theory of representation in neural networks"
requires-python = ">=3.9"
dependencies = [
    "gudhi",
    "numpy",
    "scipy",
    "torch",
    "scikit-learn",
    "matplotlib",
    "networkx",
    "ripser",
    "persim",
    "polytope",
    "pycddlib",
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/QuotientHomology"]
